# IntelliNews-AI

./: .env  .gitignore  .gitmodules  README.md  main.py  pyproject.toml  summarization-compare.ipynb  test_tts.py
api/: routes.py
api/endpoints/: recommendation.py  summarization.py  tts.py
config/: settings.py
db/: __init__.py  database.py  models.py
docker/: docker-compose.yaml  generate-credentials.sh  seeweed-compose.yaml
docker/config/: filer.toml  s3.json
docker/db/init/: 001_schema.sql
services/: constants.py  news_client.py
services/recommendation/: __init__.py  models.py  service.py
services/summarization/: __init__.py  base_summarizer.py  models.py  news_summarization_service.py  phobert_summarizer.py  position_summarizer.py  service.py  vit5_summarizer.py
services/tts/: __init__.py  models.py  news_tts_service.py  service.py  storage.py
