[tool.poetry]
name = "intellinews-ai"
version = "0.1.0"
description = "AI Service for IntelliNews - TTS, Recommendation, and Summarization"
authors = ["IntelliNews Team"]
readme = "README.md"
packages = [
    {include = "services"},
    {include = "api"},
    {include = "config"}
]

[tool.poetry.dependencies]
python = "==3.12.*"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
vieneu = "^1.0.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.18"
python-dotenv = "^1.0.0"
boto3 = "^1.42.44"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
