[tool.poetry]
name = "intellinews-ai"
version = "0.1.0"
description = "AI Service for IntelliNews - TTS, Recommendation, and Summarization"
authors = ["IntelliNews Team"]
readme = "README.md"
packages = [
    {include = "services"},
    {include = "api"},
    {include = "config"},
    {include = "db"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
vieneu = "^1.0.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.18"
python-dotenv = "^1.0.0"
boto3 = "^1.42.44"
requests = "^2.32.5"
httpx = "^0.27.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.3.2"}
transformers = "^4.40.0"
torch = "^2.2.0"
scikit-learn = "^1.4.0"
numpy = "^2.0.2"
underthesea = "^6.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
